# ignition

./: .gitignore  Cargo.toml  README.md  components.toml
benches/: initialization.rs  triangle.rs
macros/event_loop/run_return/: Cargo.toml
macros/events/handle_events/: Cargo.toml
macros/events/redraw_requested/: Cargo.toml
macros/game_loop/src/: lib.rs
macros/game_loop_that_does_not_hijack_main_thread/: Cargo.toml
macros/render/: Cargo.toml
src/: core.rs  ecs.rs  lib.rs  liberty.rs  life.rs  manifestation.rs  object.rs  objects.rs  options.rs  prelude.rs  renderer.rs  shaders.rs  systems.rs
src/base_derive/: Cargo.toml
src/component/: Cargo.toml
src/component_derive/: Cargo.toml
src/core/: command_buffer.rs  ecs.rs  framebuffers.rs  future.rs  instance.rs  logical_device.rs  objects.rs  options.rs  parameters.rs  physical_device.rs  pipeline.rs  render_pass.rs  rendering.rs  shaders.rs  shapes.rs  surface.rs  swapchain.rs  swapchain_image.rs  validation_layers.rs
src/ecs/: abduction.rs  annihilation.rs  component.rs  entity.rs  genesis.rs  ghost.rs  gizmos.rs
src/engine/: Cargo.toml
src/game_loop/: Cargo.toml
src/ignite/: Cargo.toml
src/liberty/: window.rs
src/life/: abduction.rs  annihilation.rs  genesis.rs  ghost.rs  gizmos.rs  glitch.rs
src/manifestation/: apex.rs  artist.rs  life.rs  lift_off.rs  nostalgia.rs  painting.rs  race_track.rs  silhouette.rs
src/object/: rectangle.rs  square.rs  triangle.rs
src/objects/: rectangle.rs  square.rs  triangle.rs  vertex.rs
src/renderer/: core.rs  ecs.rs  objects.rs  runtime.rs  setup.rs  shapes.rs  systems.rs
tests/: core.rs  objects.rs  renderer.rs  shapes.rs  triangle.rs  triangle.wgsl  utils.rs
tests/basic_shapes/: mod.rs  one_triangle.rs
tests/shaders/: gradient.wgsl
(+113 files in other folders)
