[package]
name = "ignition"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.26"
wgpu = "0.13"

env_logger = "0.9"
testing_logger = "0.1"
log = { version = "0.4", features = ["release_max_level_off"] }
thiserror = "1.0"

pollster = "0.2"

image = "0.24"
cgmath = "0.18"
bincode = "1.3"
derive_builder = "0.11.2"
serde = "1.0"

futures-intrusive = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "triangle"
harness = false