[package]
name = "ignition"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.26", default-features = false, features = ["x11"] }
wgpu = "0.13"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
cgmath = { version = "0.17", features = ["serde"] }

env_logger = "0.9"
log = "0.4"
pollster = "0.2"
thiserror = "1.0"
futures-intrusive = "0.4"

component = { path = "src/component" }
engine = { path = "src/engine" }

[dev-dependencies]
criterion = "0.3"
bytemuck = "1.12" 
bytemuck_derive = "1.1"

cgmath = { version = "0.17", features = ["serde"] }
legion = "0.3"
specs = {version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"

[[bench]]
name = "triangle"
harness = false